# touster

./: .gitignore  README.md  overview.md  pyproject.toml  touster.ipynb  touster.md
tests/: test_config.py  test_dashboard.py  test_datagen.py  test_dataset.py  test_export.py  test_export_stage.py  test_hardware.py  test_loop.py  test_smoke.py  test_tuning.py  test_tuning_loop.py
touster/: cli.py  config.py  console.py  display.py  state.py
touster/dashboard/: __init__.py  app.py  compare.py
touster/dataset/: dedup.py  formats.py  generate.py  hub.py  load.py  modes.py  preview.py  quality.py  schema.py  structure.py  validate.py
touster/export/: __init__.py  gguf.py  merge.py  modelcard.py
touster/hardware/: catalog.py  detect.py  estimate.py  report.py
touster/llm/: client.py  factory.py  ollama_client.py  openai_client.py
touster/tuning/: agent.py  checkpoint.py  estimate_cost.py  eval.py  export_stage.py  final.py  loop.py  optuna_search.py  prepare.py  trial.py
touster/tuning/backends/: base.py  cpu_backend.py  factory.py  mlx_backend.py  unsloth_backend.py
