[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touster"
version = "0.1.0"
description = "All-in-one LoRA fine-tuning pipeline with autoresearch-style hyperparameter search"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "textual>=0.61",
    "psutil>=5.9",
    "py-cpuinfo>=9.0",
    "httpx>=0.27",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.19",
    "accelerate>=0.29",
    "huggingface-hub>=0.22",
    "datasketch>=1.6",
    "typer>=0.12",
    "pydantic>=2.7",
    "numpy>=1.26",
    "safetensors>=0.4",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "unsloth",
    "bitsandbytes>=0.43",
    "triton",
]
cpu = [
    "torch>=2.2",
]
mlx = [
    "mlx>=0.12",
    "mlx-lm>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[project.scripts]
touster = "touster.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["touster"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 120
markers = ["smoke: full end-to-end pipeline test (slow)"]
