[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touster"
version = "0.1.0"
description = "All-in-one LoRA fine-tuning pipeline with autoresearch-style hyperparameter search"
requires-python = ">=3.10"
# Core stays light — hardware check, config, and dataset generation (stages
# 1-3) never need torch/transformers. Those are declared under the `train`
# extra below and only get pulled in once the tuning stage (stage 4) exists.
dependencies = [
    "ipython>=8.0",       # touster/display.py — HTML output in notebook cells
    "psutil>=5.9",        # touster/hardware/detect.py
    "nvidia-ml-py>=12.0", # optional GPU probe; import is guarded, safe if no GPU
    "httpx>=0.27",        # touster/llm/* — Ollama + OpenAI-compatible clients
    "datasketch>=1.6",    # touster/dataset/dedup.py — MinHash near-dup filter
    "datasets>=2.19",     # touster/dataset/hub.py — mode-2 HF dataset loading
]

[project.optional-dependencies]
# Training stage — LoRA fine-tuning backends + TPE hyperparameter search.
train = [
    "transformers>=4.40",
    "peft>=0.10",
    "accelerate>=0.29",
    "numpy>=1.26",
    "safetensors>=0.4",
    "optuna>=4.0",  # touster/tuning/optuna_search.py — TPE sampler, no torch dep of its own
]
gpu = [
    "torch>=2.2",
    "unsloth",
    "bitsandbytes>=0.43",
    "triton",
]
cpu = [
    "torch>=2.2",
]
mlx = [
    "mlx>=0.12",
    "mlx-lm>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["touster"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 120
markers = ["smoke: full end-to-end pipeline test (slow)"]
